resolved modal2 problems by changing z-index

--- a/app/assets/stylesheets/landingpage.scss
+++ b/app/assets/stylesheets/landingpage.scss
@@ -113,9 +113,11 @@ a.signup {
   font-size: 55px;
   font-weight: lighter;
   color: $color;
-
 }
 
+.welcome-text {
+  position: relative;
+}
 .signupButton {
   background-color: $color;
   border: 1px solid $color;
